fix: fixed headlines, button labels

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -230,7 +230,7 @@ import List from '../components/ui/List.astro'
       </div>
     </Content>¨
     <Content bg='light'>
-      <H2>Získejte svůj výtisk</H2>
+      <H2>Získejte PDF knihu zdarma </H2>
       <Text class='pb-4'>
         Tato kniha je dostupná zdarma díky podpoře nadace EPCG. Pro získání bezplatného výtisku nám jednoduše napište na
         Instagram nebo na <TextLink href='mailto:autor@usmevproadama.cz'>autor@usmevproadama.cz</TextLink>
