--- a/src/pages/podporovatele.astro
+++ b/src/pages/podporovatele.astro
@@ -7,12 +7,13 @@ import H3 from '../components/ui/H3.astro'
 import Backlink from '../components/Backlink.astro'
 import List from '../components/ui/List.astro'
 import LinkButton from '../components/ui/LinkButton.astro'
+import H1 from '../components/ui/H1.astro'
 ---
 
 <Layout>
   <main>
     <Content bg='light'>
-      <H2 class='text-left'>Jak můžete ze své pozice pomoci</H2>
+      <H1 class="text-center">Jak můžete ze své pozice pomoci</H1>
       <List class='list-decimal text-dark'>
         <li>
           Předat knihu kolegům či oddělením, která se ve Vašem kraji setkávají s pozůstalými – ať už jde o krizová
@@ -32,7 +33,7 @@ import LinkButton from '../components/ui/LinkButton.astro'
       </div>
     </Content>
     <Content bg='white'>
-      <H3 class='text-left'> Proč věřím, že to má smysl</H3>
+      <H2 class='text-left'>Proč věřím, že to má smysl</H2>
       <List class='list-disc text-dark mb-6'>
         <li>V krizových okamžicích často chybí čas a síla hledat pomoc.</li>
         <li>Leták i kniha jsou koncipovány tak, aby se lidem dostaly včas, srozumitelně a v klidu.</li>
