--- a/src/pages/ukazka-knihy.astro
+++ b/src/pages/ukazka-knihy.astro
@@ -26,7 +26,7 @@ import LinkButton from '../components/ui/LinkButton.astro'
         <i>Změna je život, a ne vždy máme na výběr, kdy a jaká změna přijde. Změna nás nutí růst, ale je to špatně nebo dobře?</i>
       </Text>
       <div class="flex justify-center mt-8">
-        <LinkButton theme="primary" href="/#kniha">Získat bezplatný výtisk</LinkButton>
+        <LinkButton theme="primary" href="/#kniha"> Získat PDF knihu zdarma</LinkButton>
       </div>
     </Content>
   </main>
