chapters edit + Nadace EP Group

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -78,7 +78,7 @@ import List from '../components/ui/List.astro'
       <div class='grid grid-cols-1 md:grid-cols-2 items-center gap-8'>
         <div>
           <Text class='text-left'>
-            Jsem matka, která po ztrátě partnera a těžké nemoci svého syna Adama prochází cestou, která mi ukázala sílu
+            Jsem máma, která po ztrátě partnera a těžké nemoci svého syna Adama prochází cestou, která mi ukázala sílu
             v sobě i v lidech kolem mě. Tato kniha není jen příběhem, ale i nástrojem, jak se vyrovnat s tragédiemi a
             najít nové smysly života. Příběh Adama je příběhem nejen jeho, ale i všech dětí a rodičů, kteří se
             nevzdávají a i přes životní tragédie dělají své maximum.
@@ -121,35 +121,35 @@ import List from '../components/ui/List.astro'
             <Chapter
               index={1}
               title='Tady a teď'
-              description='„Život s Adamem má spoustu omezení, ale ráda Vám vysvětlím, jak jsme se k handicapu dostali a proč jsem ochotná mu dát vše i za cenu vlastního štěstí a životní síly. Pro mě je Adam chodící zázrak, můj zdroj, moje naděje a můj život."'
+              description='„Život s Adamem má spoustu omezení, ale ráda vám vysvětlím, jak jsme se k handicapu dostali, a proč jsem ochotná dát svému synovi vše i za cenu vlastního štěstí a životní síly. Pro mě je Adam chodící zázrak, můj zdroj, moje naděje a můj život."'
             />
           </Li>
           <Li>
             <Chapter
               index={2}
               title='Adam byl zdravý'
-              description='„Adam se rád smál, když zrovna nepřemýšlel a nezkoumal, tak se prostě smál. Nezažila jsem u něj smutky, málokdy se i rozčiloval, prostě byl takový kliďas. A zbožňoval tátu, ti dva byli nerozlučná dvojka, mazlili se, hráli si, zkoušeli spolu všechny blbosti a hlavně koupání, to byla jejich každovečerní aktivita."'
+              description='„Adam se rád smál. Když zrovna nepřemýšlel a nezkoumal, tak se prostě smál. Nezažila jsem u něj smutky, málokdy se rozčiloval, prostě byl takový kliďas. A zbožňoval tátu, ti dva byli nerozlučná dvojka, mazlili se, hráli si, zkoušeli spolu všechny blbosti a hlavně koupání, to byla jejich každovečerní aktivita."'
             />
           </Li>
           <Li>
             <Chapter
               index={3}
               title='Adam měl tátu'
-              description='„Co kdyby ten den nejel/a autem? Co kdybych do obchodu dojel/a místo něj/ní já? Co kdybychom do nemocnice jeli dříve? Co kdybych zavolal/a sanitku dříve? Co kdyby, co kdyby… Tyto úvahy jsem slyšela snad od každého ovdovělého rodiče, kterého jsem měla možnost poznat."'
+              description='„Co kdyby ten den nejel/a autem? Co kdybych do obchodu dojel/a místo něj/ní já? Co kdybychom do nemocnice jeli dříve? Co kdybych zavolal/a sanitku dříve? Co kdyby, co kdyby… Tyto úvahy jsem slyšela snad od každého ovdovělého rodiče, kterého jsem měla možnost poznat. Je to přirozené a je zatraceně těžké se srovnat s tím, že jsme nedostali šanci mít nad něčím kontrolu, nebo odchod toho druhého zastavit."'
             />
           </Li>
           <Li>
             <Chapter
               index={4}
               title='Adam a strážní andělé'
-              description='„Když jsem si myslela, že už to dlouho zvládat nebudu, tak přišla pomoc, a to v podobě rány do předního nárazníku."'
+              description='„Když jsem si myslela, že už to dlouho zvládat nebudu, přišla pomoc – v podobě rány do předního nárazníku."'
             />
           </Li>
           <Li>
             <Chapter
               index={5}
               title='Adam byl nemocný'
-              description='„Přijeli jsme v noci, Adam byl bledý, přestával reagovat, měl horečku a pozvracel mě, což u něj bylo extrémně vzácné. Od tragédie nás dělilo pár hodin, ale to jsem v tu chvíli nevěděla."'
+              description='„Přijeli jsme v noci, Adam byl bledý, přestával reagovat, měl horečku a pozvracel mě, což u něj bylo extrémně vzácné. Od tragédie nás dělilo jen pár hodin, ale to jsem v tu chvíli nevěděla."'
             />
           </Li>
           <Li>
@@ -163,21 +163,21 @@ import List from '../components/ui/List.astro'
             <Chapter
               index={7}
               title='Adam dnes'
-              description='„Tak často se setkáváme se šikanou, ať už Adam nebo já jako rodič, až mě i párkrát napadlo, jestli by vlastně pro nás nebylo lepší, kdybychom to tehdy oba nepřežili. Až do takových stavů mě společnost a absolutně nezvládnutá inkluze v ČR dostávají. Místo toho, aby lidé vnímali ten zázrak, kterým Adam je a ten smutný příběh, kterým jsme oba prošli, tak nám naši cestu neustále ztěžují sobeckostí, závistí (ano, opravdu!) a pokrytectvím."'
+              description='„Je mi z toho smutno, ale s Adamem se bohužel do obchodu jít nedá. Představte si tu hladinu kortizolu, když vstoupíte do obchodu s dítětem, které vzhledově vypadá na osm, mluví na dva a ještě má nezvladatelné hyperaktivní impulzy ujíždět s vozíkem, házet různé věci do košíku a zkoumat zeleninu házením na zem. Ale když chcete ušetřit, tak neznám lepší způsob. Je to jako běžet sprint přes regály a co tam nestihnu hodit, to nemám a nejspíš ani nepotřebuju."'
             />
           </Li>
           <Li>
             <Chapter
               index={8}
               title='Změna není konec'
-              description='„Bolest má své kouzlo – spojuje lidi. Spojila například tisíce lidí během medializace našeho příběhu, vzbudila empatii ve stovkách lidí, kteří se podíleli na sbírce pro Adama. Bolest mi našla nejlepší kamarádku s podobným osudem. Bolest nám do života přivedla náhradní babičku a další výjimečné lidi. Sdílení bolesti pomáhá, ulevuje a propojuje lidi, kteří se jinak nemohou propojit se svým okolím. Jakmile potkáte někoho s podobným příběhem, v hlavě to udělá „klik" a chováte se k tomu člověku, jako byste se znali roky, a to jen díky tomu, že sdílíte bolest."'
+              description='„Bolest má také své kouzlo – spojuje. Spojila například tisíce lidí během medializace našeho příběhu, vzbudila empatii ve stovkách lidí, kteří se podíleli na sbírce pro Adama. Bolest mi našla nejlepší kamarádku s podobným osudem. Bolest nám do života přivedla náhradní babičku a další výjimečné lidi. Sdílení bolesti pomáhá, ulevuje a propojuje lidi, kteří se se svým okolím jinak propojit nemohou. Jakmile potkáte někoho s podobným příběhem, v hlavě to udělá „klik“ a chováte se k sobě, jako byste se znali roky jen díky tomu, že sdílíte bolest."'
             />
           </Li>
           <Li>
             <Chapter
               index={9}
               title='Duben 2025'
-              description='„Téměř čtyři roky se snažím nalézt novou cestu, nový směr a téměř čtyři roky jsem nebyla objektivně schopná přijít na to, proč ostatním v mé situaci to jde a mě ne. A problémem jsem celou dobu byla já. Já a má vina sama k sobě."'
+              description='„Téměř čtyři roky se snažím nalézt novou cestu, nový směr a téměř čtyři roky jsem nebyla schopná přijít na to, proč to ostatním v mé situaci jde, a mě ne. A problémem jsem celou dobu byla já. Já a má vina. Odmítání a zavírání očí před hrozivým zjištěním, že jsem ve své hlavě tolik věcí zkreslila, potlačila a nechtěla vidět."'
             />
           </Li>
         </ol>
@@ -191,7 +191,7 @@ import List from '../components/ui/List.astro'
             <Text class='text-left'><strong>Kniha zdarma</strong> díky podpoře partnerů</Text>
             <Text class='text-sm text-left text-secondary'>
               Kniha byla vytvořena s podporou <a href='https://www.nadaceepg.cz/s/' class='underline' target='_blank'
-                >Nadace EP Corporate Group</a
+                >Nadace EP Group</a
               >, která se zabývá pomocí pozůstalým rodinám a seniorům v nouzi, a <a
                 class='underline'
                 href='https://www.hlavacek-krampera.cz/'>Advokátní Kanceláře Hlaváček&Krampera</a
@@ -232,7 +232,7 @@ import List from '../components/ui/List.astro'
     <Content bg='light'>
       <H2>Získejte PDF knihu zdarma </H2>
       <Text class='pb-4'>
-        Tato kniha je dostupná zdarma díky podpoře nadace EPCG. Pro získání bezplatného výtisku nám jednoduše napište na
+        Tato kniha je dostupná zdarma díky podpoře Nadace EP Group. Pro získání knihy v PDF nám jednoduše napište na
         Instagram nebo na <TextLink href='mailto:autor@usmevproadama.cz'>autor@usmevproadama.cz</TextLink>
       </Text>
       <div id='kniha' class='grid grid-cols-1 md:grid-cols-2 gap-4'>
