--- a/src/pages/kdo-nam-pomohl.astro
+++ b/src/pages/kdo-nam-pomohl.astro
@@ -14,7 +14,7 @@ import HelpBox from '../components/HelpBox.astro'
       <H2 class='text-left'>Kde jsme s Adamem našli finanční pomoc, kterou jsme neměli od státu?</H2>
       <div class='grid grid-cols-1 md:grid-cols-3 gap-4 mb-8'>
         <HelpBox
-          label='Nadace EPCG'
+          label='Nadace EP Group'
           link='https://www.nadaceepcg.cz/s/'
           note="Nadace nabízí několik grantů na bázi měsíčních příspěvků pro pozůstalé rodiny, osiřelé děti nebo pozůstalé handicapované děti."
           logo='/img/nadace.png'
@@ -22,7 +22,7 @@ import HelpBox from '../components/HelpBox.astro'
         <HelpBox
           label='Donio.cz'
           link='https://www.donio.cz/'
-          note="Na Donio si můžete požádat o založení veřejné sbírky v případech, kdy těžkou životní situaci nezvládnete sami, s Adámkem jsme sbírku využili v době hospitalizace v roce 2021."
+          note="Na Donio můžete požádat o pomoc v případech, kdy těžkou životní situaci nezvládnete sami, s Adámkem jsme sbírku využili v době hospitalizace v roce 2021"
           logo='/img/donio.svg'
         />
         <HelpBox
