--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,7 +56,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <Content bg='dark'>
           <strong class='inline-block text-lg mb-2'>Úsměv pro Adama</strong>
           <p class='text-tertiary pb-6 border-b border-[#A25D32]'>
-            Příběh naděje, síly a pomoci. Kniha zdarma díky podpoře nadace EPCG.
+            Příběh naděje, síly a pomoci. Kniha zdarma díky podpoře Nadace EP Group.
           </p>
           <p class='text-sm pt-6 text-[#E8BE94]'>
             © {new Date().getFullYear()} Úsměv pro Adama. Všechna práva vyhrazena.
