feat: added legal page, section logos

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,7 +58,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <p class='text-tertiary pb-6 border-b border-[#A25D32]'>
             Příběh naděje, síly a pomoci. Kniha zdarma díky podpoře Nadace EP Group.
           </p>
-          <p class='text-sm pt-6 text-[#E8BE94]'>
+          <div class="mt-4 text-[#E8BE94] hover:underline">
+            <ul>
+              <li><a class="text-sm" href="/zasady-zpracovani-osobnich-udaju">Zásady zpracování osobních údajů</a></li>
+            </ul>
+          </div>
+          <p class='text-sm pt-4 text-[#E8BE94]'>
             © {new Date().getFullYear()} Úsměv pro Adama. Všechna práva vyhrazena.
           </p>
         </Content>
