--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -43,7 +43,8 @@ import List from '../components/ui/List.astro'
     <Content bg='light' class="pt-0">
       <div class='grid grid-cols-1 md:grid-cols-3 gap-4'>
         <Box>
-          <div class='grid grid-rows-[auto_1fr_auto] h-full'>
+          <div class='grid grid-rows-[100px_auto_1fr_auto] h-full'>
+            <img class="w-[90px] m-auto" src="/img/logo_podporovatele.svg" alt="" />
             <H3 class='text-dark text-left text-lg font-semibold'> Pro podporovatele </H3>
             <Text class='text-left'>
               Přišel vám od nás výtisk do rukou? Budeme rádi, když nám pomůžete dostat téma k
@@ -53,7 +54,8 @@ import List from '../components/ui/List.astro'
           </div>
         </Box>
         <Box>
-          <div class='grid grid-rows-[auto_1fr_auto] h-full'>
+          <div class='grid grid-rows-[100px_auto_1fr_auto] h-full'>
+            <img class="w-[150px] m-auto" src="/img/logo_pruvodce_pozustalym.svg" alt="" />
             <H3 class='text-dark text-left text-lg font-semibold'> Projekt Průvodce pozůstalým </H3>
             <Text class='text-left'>
               Praktické rady a tipy pro lidi v těžkých životních situacích spojených se ztrátou blízké osoby.
@@ -62,7 +64,8 @@ import List from '../components/ui/List.astro'
           </div>
         </Box>
         <Box>
-          <div class='grid grid-rows-[auto_1fr_auto] h-full'>
+          <div class='grid grid-rows-[100px_auto_1fr_auto] h-full'>
+            <img class="w-[80px] m-auto" src="/img/logo_jsem_taky_dite.svg" alt="" />
             <H3 class='text-dark text-left text-lg font-semibold'> Projekt Jsem taky dítě </H3>
             <Text class='text-left'>
               Jako máma dítěte s autismem bojuji za nové pojetí inkluze, která není o tom, aby se dítě přizpůsobilo
