--- a/src/pages/jsem-taky-dite.astro
+++ b/src/pages/jsem-taky-dite.astro
@@ -18,6 +18,7 @@ const statisticsPosts = await getCollection('statistics')
 <Layout>
   <main>
     <Content bg="light">
+      <img class="w-[120px] m-auto mb-8" src="/img/logo_jsem_taky_dite.svg" alt="" />
       <H1 class="text-center">Základní informace k autismu</H1>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
         <Box class="text-sm">
