--- a/src/pages/podporovatele.astro
+++ b/src/pages/podporovatele.astro
@@ -13,6 +13,7 @@ import H1 from '../components/ui/H1.astro'
 <Layout>
   <main>
     <Content bg='light'>
+      <img class="w-[100px] m-auto mb-8" src="/img/logo_podporovatele.svg" alt="" />
       <H1 class="text-center">Jak můžete ze své pozice pomoci</H1>
       <List class='list-decimal text-dark'>
         <li>
