--- a/src/pages/pruvodce-pozustalym.astro
+++ b/src/pages/pruvodce-pozustalym.astro
@@ -15,6 +15,7 @@ const steps = await getCollection('steps')
 <Layout>
   <main>
     <Content bg='white'>
+      <img class="w-[200px] m-auto mb-8" src="/img/logo_pruvodce_pozustalym.svg" alt="" />
       <H1 class="text-center">Kroky po úmrtí blízkého</H1>
       <Text class='mb-1'>
         Tato kniha nabízí nejen příběh, ale také konkrétní rady a praktické tipy pro lidi, kteří čelí ztrátě blízkého.
@@ -24,7 +25,7 @@ const steps = await getCollection('steps')
       <div class='grid grid-cols-1 md:grid-cols-3 gap-4'>
         {steps.sort((a, b) => a.data.order - b.data.order).map((step) => <Step step={step.data} />)}
         <div class="flex items-center p-6 justify-center">
-          <img src="/img/logo_projekt.webp" alt="" class="max-w-full" />
+          <img src="/img/logo_pruvodce_pozustalym.svg" alt="" class="max-w-full" />
         </div>
       </div>
     </Content>
