feat: added box image links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,9 @@ import List from '../components/ui/List.astro'
       <div class='grid grid-cols-1 md:grid-cols-3 gap-4'>
         <Box>
           <div class='grid grid-rows-[100px_auto_1fr_auto] h-full'>
-            <img class="w-[80px] m-auto" src="/img/logo_podporovatele.svg" alt="" />
+            <a href="/podporovatele">
+              <img class="w-[80px] m-auto" src="/img/logo_podporovatele.svg" alt="" />
+            </a>
             <H3 class='text-dark text-left text-lg font-semibold'> Pro podporovatele </H3>
             <Text class='text-left'>
               Přišel vám od nás výtisk do rukou? Budeme rádi, když nám pomůžete dostat téma k
@@ -55,7 +57,9 @@ import List from '../components/ui/List.astro'
         </Box>
         <Box>
           <div class='grid grid-rows-[100px_auto_1fr_auto] h-full'>
-            <img class="w-[160px] m-auto" src="/img/logo_pruvodce_pozustalym.svg" alt="" />
+            <a href="/pruvodce-pozustalym">
+              <img class="w-[160px] m-auto" src="/img/logo_pruvodce_pozustalym.svg" alt="" />
+            </a>
             <H3 class='text-dark text-left text-lg font-semibold'> Projekt Průvodce pozůstalým </H3>
             <Text class='text-left'>
               Praktické rady a tipy pro lidi v těžkých životních situacích spojených se ztrátou blízké osoby.
@@ -65,7 +69,9 @@ import List from '../components/ui/List.astro'
         </Box>
         <Box>
           <div class='grid grid-rows-[100px_auto_1fr_auto] h-full'>
-            <img class="w-[80px] m-auto" src="/img/logo_jsem_taky_dite.svg" alt="" />
+            <a href="/jsem-taky-dite">
+              <img class="w-[80px] m-auto" src="/img/logo_jsem_taky_dite.svg" alt="" />
+            </a>
             <H3 class='text-dark text-left text-lg font-semibold'> Projekt Jsem taky dítě </H3>
             <Text class='text-left'>
               Jako máma dítěte s autismem bojuji za nové pojetí inkluze, která není o tom, aby se dítě přizpůsobilo
