--- a/src/components/SupportBox.astro
+++ b/src/components/SupportBox.astro
@@ -17,7 +17,7 @@ const { headline, description, image } = Astro.props
     <div>
       <h3 class='text-dark font-semibold mb-4'>{headline}</h3>
       <Text class='text-sm text-left'>{description}</Text>
-      <slot name='content' />
+      <div class='support-box'><slot name='content' /></div>
     </div>
     <slot name='toggle' />
   </div>
