--- a/src/components/cookie-consent/CookieConsent.astro
+++ b/src/components/cookie-consent/CookieConsent.astro
@@ -10,7 +10,7 @@ import './cookie-consent.css'
   import { config } from './CookieConsent.ts'
 
   // toggle custom black theme
-  document.body.classList.add('cc--gtp')
+  document.body.classList.add('cc--upa')
 
   run(config)
 </script>
