--- a/src/components/cookie-consent/cookie-consent.css
+++ b/src/components/cookie-consent/cookie-consent.css
@@ -1,11 +1,11 @@
-.cc--gtp {
-    --cc-bg: #2a248b;
-    --cc-primary-color: rgb(239, 244, 246);
-    --cc-secondary-color: #b1bdc3 !important;
+.cc--upa {
+    --cc-bg: #FDF8F0;
+    --cc-primary-color: #6B3F2A;
+    --cc-secondary-color: #6B3F2A !important;
 
-    --cc-btn-primary-bg: #ffffff;
-    --cc-btn-primary-color: #000;
-    --cc-btn-primary-hover-bg: #ccd4d8;
+    --cc-btn-primary-bg: #6B3F2A;
+    --cc-btn-primary-color: #FDF8F0;
+    --cc-btn-primary-hover-bg: #FDF8F0;
     --cc-btn-primary-hover-color: #000;
     --cc-btn-primary-border-color: var(--cc-btn-primary-bg);
 
@@ -40,9 +40,9 @@
 
     --cc-separator-border-color: #fff;
 
-    --cc-footer-bg: #2a248b;
+    --cc-footer-bg: #FDF8F0;
     --cc-footer-color: var(--cc-secondary-color);
-    --cc-footer-border-color: #2a248b;
+    --cc-footer-border-color: #FDF8F0;
 }
 
 .cc--elegant-black #cc-main .cm,
@@ -54,4 +54,8 @@
 
 .cm__body .cm__btns .cm__btn--secondary {
     display: none !important;
+}
+
+button[data-cc]{
+    display: none;
 }
