fix: fixed font size on guide page

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,7 +89,10 @@
     margin-left: 15px;
 }
 
-.support-box p,li,strong, ul>li {
+.toggle-content p,
+.toggle-content li,
+.toggle-content strong,
+.toggle-content ul>li {
     @apply text-sm ;
 }
 
